the scrollbar is fixed

--- a/transcendence-master/src/index.css
+++ b/transcendence-master/src/index.css
@@ -2,4 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 0px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
 
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
